flapivor/tests/m1/hopix/parser/bad/100-ref-2.hopix
val ill_typed = ref * 1